# ASIO-C-ARES

./: .appveyor.yml  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
.appveyor/: boost.ps1  cares.ps1
.travis/: boost.sh  cares.sh  clang.sh  cmake.sh  gcc.sh
cmake/modules/: FindBeast.cmake  FindCatch.cmake  FindMParkVariant.cmake
src/: CMakeLists.txt
src/asio_cares/: CMakeLists.txt  cancel.cpp  channel.cpp  done.cpp  error.cpp  library.cpp  string.cpp
src/asio_cares/include/asio_cares/: cancel.hpp  channel.hpp  done.hpp  error.hpp  library.hpp  process.hpp  process_one.hpp  send.hpp  string.hpp
src/asio_cares/include/asio_cares/detail/: select.hpp
src/asio_cares/tests/: CMakeLists.txt  cancel.cpp  done.cpp  error.cpp  process.cpp  process_one.cpp  send.cpp  setup.cpp  setup.hpp
src/asio_cares/tests/detail/: select.cpp
